[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
categories = ["encoding", "network-programming"]
description = "An implementation of JSON Lines for Rust"
documentation = "https://docs.rs/jsonl"
edition = "2018"
homepage = "https://github.com/arzg/jsonl"
license = "MIT OR Apache-2.0"
name = "jsonl"
readme = "README.md"
repository = "https://github.com/arzg/jsonl"
version = "1.3.0"

[features]
mio-tcp-stream = ["mio", "parking_lot"]

[dependencies]
mio = {version = "0.7.7", features = ["net"], optional = true}
parking_lot = {version = "0.11.1", optional = true}
serde = "1"
serde_json = "1"
thiserror = "1"
