[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
categories = ["encoding", "network-programming"]
description = "An implementation of JSON Lines for Rust"
documentation = "https://docs.rs/jsonl"
edition = "2018"
homepage = "https://github.com/arzg/jsonl"
license = "MIT OR Apache-2.0"
name = "jsonl"
readme = "README.md"
repository = "https://github.com/arzg/jsonl"
version = "3.1.0"

[dependencies]
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["io-util", "io-std", "net", "process"], optional = true}
